# disponibilidade-nfe

./: README.md  pyproject.toml  tox.ini
.github/workflows/: main.yml
disponibilidade_nfe/: nfe.py
example/: example.py
tests/: test_nfe.py
